<resources>
    <string name="app_id">574470583015363</string>
    <string name="appname">MGL Express</string>
    <string name="client_token">b7f3dca30dbc06a6888a393a324853ca</string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="na">NA</string>
    <string name="ak_login_protocol_scheme">ak964234977027033</string>
    <string name="action_bar_title_hello">Hello</string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="name">Name</string>
    <string name="company_name">Company Name</string>
    <string name="email_address">Email</string>
    <string name="address">Address</string>
    <string name="confirm_password">Enter At Least 6 Digit Confirm Password</string>
    <string name="password">Enter At least 6 Digit Password</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="phonehint">9 xxx xxx xxx</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="event">Event &amp; Promotion</string>
    <string name="waybilltrack">Waybill Track &amp; Trace</string>
    <string name="logout">Logout</string>
    <string name="enter_waybill_code">Enter waybill code</string>
    <string name="_95">+95</string>
    <string name="forgot">Forgot Password?</string>

    <string name="drawer_itemf">Event Promotions</string>
    <string name="drawer_items">Waybill Track &amp; Trace</string>
    <string name="drawer_opened">Open</string>
    <string name="drawer_closed">Closed</string>
</resources>
