<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
    <androidx.appcompat.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:local="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff3d00"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            local:layout_constraintStart_toStartOf="parent"
            local:layout_constraintTop_toTopOf="parent" />
    <!--<ProgressBar-->
            <!--android:id="@+id/progress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"/>-->
    <!--<ImageView-->
            <!--android:id="@+id/img"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:src="@drawable/logo"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintVertical_bias="0.02"/>-->
    <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:hint="@string/name"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
    android:imeOptions="actionGo"/>
    <EditText
            android:id="@+id/edtCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="text"
            android:hint="@string/company_name"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.22"
    android:imeOptions="actionGo"/>
    <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtCompanyName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"

            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.32"
    android:imeOptions="actionGo"/>
    <!--<EditText-->
            <!--android:id="@+id/edtAddress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--android:inputType="text"-->
            <!--android:hint="@string/address"-->
            <!--android:padding="10dp"-->
            <!--android:textColor="#000000"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--app:layout_constraintHorizontal_bias="0.0"-->
            <!--app:layout_constraintVertical_bias="0.526"-->
    <!--android:imeOptions="actionGo"/>-->
    <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textEmailAddress"
            android:hint="@string/address"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:layout_marginTop="2dp"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.42"
            android:imeOptions="actionGo"/>
    <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"

            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.52"
            android:imeOptions="actionGo"/>
    <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            app:layout_constraintVertical_bias="0.62">

    </EditText>

    <!--<EditText-->
            <!--android:id="@+id/edtPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--android:hint="@string/password"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--app:layout_constraintHorizontal_bias="0.0"-->
            <!--app:layout_constraintVertical_bias="0.637"-->
            <!--android:inputType="textPassword"-->
    <!--android:imeOptions="actionGo"/>-->
    <!--<EditText-->
            <!--android:id="@+id/edtConfirmPassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--android:padding="10dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:hint="@string/confirm_password"-->
            <!--app:layout_constraintHorizontal_bias="0.0"-->
            <!--app:layout_constraintVertical_bias="0.739"-->
            <!--android:inputType="textPassword"-->
    <!--android:imeOptions="actionDone"/>-->

    <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="#ff3d00"
            android:textColor="@color/cardview_light_background"
            android:textAllCaps="false"
            android:text="@string/confirm" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.72"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>